--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     </string>
     <string name="signup_today">Sign up to buy and sell books with friends and their community.</string>
     <string name="email_hint">Email</string>
+    <string name="full_name">Full Name</string>
 </resources>
