--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_activity_login2">Sign in</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="email_or_username">Email or Username</string>
 </resources>
