got intermediate progress dialog working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
+    <string name="progress_dialog">Login You In</string>
+    <string name="please_wait">Getting things ready for you.</string>
 </resources>
