--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="password_strength">Password must contain 6 or more characters</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
