--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,8 @@
     <string name="email">Email</string>
     <string name="password_strength">Password must contain 6 or more characters</string>
 
+    <string name="profile_fragment">Profile Fragment</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
