--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,9 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="password_strength">Password must contain 6 or more characters</string>
-
+    <string name="tab_1">Shop</string>
+    <string name="tab_2">Messages</string>
+    <string name="tab_3">Profile</string>
     <string name="profile_fragment">Profile Fragment</string>
 
     <!-- TODO: Remove or change this placeholder text -->
